--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Le Password Generator</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <h1>Password Generator</h1>
 
     <div id="promptBox">
-        <h2>Generate a random password</h2>
+        <h3>Click to generate a random password</h3>
         <hr>
         <textarea name="ysPassword" placeholder="your secure password"></textarea>
         <hr>
